# Crewai

shoping_cart_agent/: README.md  pyproject.toml
shoping_cart_agent/src/shoping_cart_agent/: Mathematician.py  shoping_agent_wiht_memory.py
